# breez_sdk_3hour_workshop

./: .env.example  .gitignore  Cargo.toml  README.md
exercises/: 00-introduction.md  01-create-a-node.md  02-fetch-node-info.md  03-receive-payment.md  04-lnurl-withdraw.md  05-send-payment.md  06-L402-client.md  06-list-payments.md  07-L402-client.md  07-nostr-wallet-connect.md  08-nostr-wallet-connect.md
src/: main.rs  nwc.rs
